src/objects/ATARC_Global_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Availability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoopLimit__c</fullName>
        <label>LoopLimit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SkipAll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SkipAll</label>
        <type>Checkbox</type>
    </fields>
    <label>ATARC Global Setting</label>
</CustomObject>